--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@ Unser Serviceportal bietet Ihnen eine breite Palette an Dienstleistungen und Job
               <div class="Folgen Sie uns">
                 <h4>Folgen Sie Uns</h4>
                 <p>
-                  <a href="http://"
+                  <a href="https://www.facebook.com/profile.php?id=61565349201972&mibextid=ZbWKwL"
                     ><svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" viewBox="0 0 24 24">
                       <g fill="none" stroke="white" stroke-linecap="round" stroke-width="3.15">
                         <path stroke-dasharray="24" stroke-dashoffset="24" d="M17 4L15 4C12.5 4 11 5.5 11 8V20"><animate fill="freeze" attributeName="stroke-dashoffset" dur="0.72s" values="24;0" /></path>
@@ -283,7 +283,7 @@ Unser Serviceportal bietet Ihnen eine breite Palette an Dienstleistungen und Job
                   ></a>
                 </p>
                 <p>
-                  <a href="http://"
+                  <a href="https://www.instagram.com/dpm.logistik"
                     ><svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" viewBox="0 0 24 24">
                       <g fill="none" stroke="white" stroke-linecap="round" stroke-linejoin="round" stroke-width="2">
                         <path stroke-dasharray="66" stroke-dashoffset="66" d="M12 3H8C5.23858 3 3 5.23858 3 8V16C3 18.7614 5.23858 21 8 21H16C18.7614 21 21 18.7614 21 16V8C21 5.23858 18.7614 3 16 3z"><animate fill="freeze" attributeName="stroke-dashoffset" dur="1.08s" values="66;132" /></path>
@@ -293,7 +293,7 @@ Unser Serviceportal bietet Ihnen eine breite Palette an Dienstleistungen und Job
                   ></a>
                 </p>
                 <p>
-                  <a href="http://"
+                  <a href="https://vm.tiktok.com/ZGeTSBv6k/"
                     ><svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" viewBox="0 0 24 24">
                       <mask id="lineMdTiktok0">
                         <path fill="#fff" d="M16.6 5.82C15.9164 5.03962 15.5397 4.03743 15.54 3H12.45V15.4C12.4262 16.071 12.1429 16.7066 11.6598 17.1729C11.1767 17.6393 10.5314 17.8999 9.86 17.9C8.44 17.9 7.26 16.74 7.26 15.3C7.26 13.58 8.92 12.29 10.63 12.82V9.66C7.18 9.2 4.16 11.88 4.16 15.3C4.16 18.63 6.92 21 9.85 21C12.99 21 15.54 18.45 15.54 15.3V9.01C16.793 9.90985 18.2974 10.3926 19.84 10.39V7.3C19.84 7.3 17.96 7.39 16.6 5.82Z" />
